[package]
name = "rustaxum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.8"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = "0.6.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
